change: Board -- bottom gap issue fixed

--- a/src/app/main-content/board/board.component.scss
+++ b/src/app/main-content/board/board.component.scss
@@ -144,7 +144,7 @@ section{
   .example-list {
     padding: 5px;
     min-height: 60px;
-    max-height: 71.8vh;
+    max-height: 680px;
     min-width: 290px;
     background: $clrBackground;
     overflow-y: auto;
